[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/scroll_menu.tres" type="Theme" id=1]
[ext_resource path="res://fonts/spacer_12.tres" type="DynamicFont" id=2]
[ext_resource path="res://script/settings_audio.gd" type="Script" id=3]
[ext_resource path="res://fonts/control_font.tres" type="DynamicFont" id=4]

[node name="audio" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 36.0
margin_right = -2.0
margin_bottom = -2.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Cols" type="HBoxContainer" parent="."]
margin_left = 24.0
margin_right = 996.0
margin_bottom = 124.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="L" type="VBoxContainer" parent="Cols"]
margin_right = 478.0
margin_bottom = 124.0
size_flags_horizontal = 3

[node name="Spacer" type="Label" parent="Cols/L"]
margin_right = 478.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 2 )

[node name="MasterVolumeLabel" type="Label" parent="Cols/L"]
margin_top = 16.0
margin_right = 478.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 4 )
text = "master volume"
align = 2
valign = 1

[node name="SoundFXVolumeLabel" type="Label" parent="Cols/L"]
margin_top = 44.0
margin_right = 478.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 4 )
text = "sound fx volume"
align = 2
valign = 1

[node name="UISoundVolumeLabel" type="Label" parent="Cols/L"]
margin_top = 72.0
margin_right = 478.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 4 )
text = "ui volume"
align = 2
valign = 1

[node name="MusicVolumeLabel" type="Label" parent="Cols/L"]
margin_top = 100.0
margin_right = 478.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 4 )
text = "music volume"
align = 2
valign = 1

[node name="R" type="VBoxContainer" parent="Cols"]
margin_left = 494.0
margin_right = 972.0
margin_bottom = 124.0
size_flags_horizontal = 3

[node name="Spacer" type="Label" parent="Cols/R"]
margin_right = 478.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )

[node name="MasterVolumeSlider" type="HSlider" parent="Cols/R"]
margin_top = 16.0
margin_right = 478.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 24 )
step = 5.0
value = 100.0
tick_count = 20

[node name="SoundFXVolumeSlider" type="HSlider" parent="Cols/R"]
margin_top = 44.0
margin_right = 478.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 24 )
step = 5.0
value = 100.0
tick_count = 20

[node name="UISoundVolumeSlider" type="HSlider" parent="Cols/R"]
margin_top = 72.0
margin_right = 478.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 24 )
step = 5.0
value = 100.0
tick_count = 20

[node name="MusicVolumeSlider" type="HSlider" parent="Cols/R"]
margin_top = 100.0
margin_right = 478.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 24 )
focus_mode = 0
step = 5.0
value = 100.0
tick_count = 20
